Refactorizado el codigo para que todo lo relacionado con modificar el usuario este en un mismo sitio.
Delete y put fakeados, falta añadirle una utilidad
